--- a/style/main.css
+++ b/style/main.css
@@ -126,20 +126,18 @@ img {
   text-align: right;
 }
 
-@media ( max-width: 1200px )
-body {
-  padding: 0 2em;
+@media ( max-width: 1200px ) {
+  body {
+    padding: 0 2em;
+  }  
+  .main {
+    flex-direction: column;
+    margin: 0;
+  }
+  .image {
+    display: none;
+  }
 }
-
-.main {
-  flex-direction: column;
-  margin: 0;
-}
-
-.image {
-  display: none;
-}
-
 .lines {
   text-align: center;
 }/*# sourceMappingURL=main.css.map */
